k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subees-frontend-service
  namespace: subees
spec:
  type: ClusterIP
  selector:
    app: subees-frontend
  ports:
    - port: 80
      targetPort: 80
