k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subees-ingress
  namespace: subees
spec:
  ingressClassName: nginx
  rules:
    - host: api.subees.beyond.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: subees-backend-service
                port:
                  number: 8080

    - host: subees.beyond.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: subees-frontend-service
                port:
                  number: 80
